fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,6 @@ a:visited, a:link, a:active, a {
 body, html {
 	width: 100%;
 	height: 100%;
-	margin: 0;
 	
 	display: flex;
 	flex-direction: column;
@@ -64,8 +63,6 @@ section {
 	background: var(--background);
 	color: var(--text);
 	justify-content: center;
-
-	overflow-y: scroll;
 }
 
 section p {
